--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,12 +2,12 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="md-home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="md-bookmarks"></ion-icon>
       <ion-label>Book Mark</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
