--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,10 +22,10 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option>
+        <ion-item-option (click)="onlink()">
           <ion-icon slot="icon-only" name="md-link"></ion-icon>
         </ion-item-option>
-        <ion-item-option>
+        <ion-item-option (click)="onMark()">
           <ion-icon slot="icon-only" name="md-bookmark"></ion-icon>
         </ion-item-option>
       </ion-item-options>
