--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,18 +3,20 @@
     <ion-title>Github Search</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar (ionChange)="filterdItems($event)" debounce="500"></ion-searchbar>
+    <ion-searchbar
+      (ionChange)="filterdItems($event)"
+      debounce="500"
+    ></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-
-    <ion-item-sliding id="item100">
+  <ion-list *ngFor="let item of itemsGithub">
+    <ion-item-sliding>
       <!-- <ion-item href="#"> -->
       <ion-item>
         <ion-label>
-          <h2>リポジトリ名</h2>
+          <h2>{{ item.items.name }}</h2>
           <p>URL</p>
           <p>description</p>
           <p>language</p>
