--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,12 +11,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let item of itemsGithub">
+  <ion-list *ngFor="let item of itemsGithub.items">
     <ion-item-sliding>
       <!-- <ion-item href="#"> -->
       <ion-item>
         <ion-label>
-          <h2>{{ item.items.name }}</h2>
+          <h2>{{ item.name }}</h2>
           <p>URL</p>
           <p>description</p>
           <p>language</p>
