--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -7,7 +7,7 @@
 <ion-content fullscreen>
   <form onsubmit="processForm(event)">
     <div class="ion-padding">
-      <ion-input placeholder="検索キーワード"></ion-input>
+      <ion-input ionInput="handleInputKeyword(event)" placeholder="検索キーワード"></ion-input>
     </div>
     <div class="searchbutton">
       <ion-button expand="block" type="submit" class="ion-no-margin">検索</ion-button>
