--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let item of itemsGithub.items">
+  <ion-list *ngFor="let item of itemsView">
     <ion-item-sliding>
       <!-- <ion-item href="#"> -->
       <ion-item>
@@ -34,4 +34,15 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+  <ion-infinite-scroll
+    threshold="100px"
+    (ionInfinite)="loadItems($event, item)"
+  >
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="読込中..."
+    >
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
