--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,7 +24,7 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option (click)="onMark()">
+        <ion-item-option (click)="onMark(item)">
           <ion-icon slot="icon-only" name="md-bookmark"></ion-icon>
         </ion-item-option>
       </ion-item-options>
