--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,15 +7,15 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list *ngFor="let item of itemsFavorite">
     <ion-item-sliding>
       <ion-item>
         <ion-label>
-          <h2>Name</h2>
-          <p>URL</p>
-          <p>description</p>
-          <p>language</p>
-          <p>owner</p>
+          <h2>{{ item.repositoryName }}</h2>
+          <p>URL: {{ item.url }}</p>
+          <p>Desription: {{ item.description }}</p>
+          <p>Language: {{ item.language }}</p>
+          <p>owner : {{ item.ownerLoginName }}</p>
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
