Delete用のInterfaceの編集

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -19,7 +19,7 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="onDelete()">
+        <ion-item-option color="danger" (click)="onDelete(item.id)">
           <ion-icon slot="icon-only" name="md-trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
