--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,7 +15,7 @@
           <p>URL: {{ item.url }}</p>
           <p>Desription: {{ item.description }}</p>
           <p>Language: {{ item.language }}</p>
-          <p>owner : {{ item.ownerLoginName }}</p>
+          <p>owner : {{ item.owner_login_name }}</p>
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
