--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,22 +7,27 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let item of itemsFavorite">
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>
-          <h2>{{ item.repositoryName }}</h2>
-          <p>URL: {{ item.url }}</p>
-          <p>Desription: {{ item.description }}</p>
-          <p>Language: {{ item.language }}</p>
-          <p>owner : {{ item.owner_login_name }}</p>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="onDelete(item.id)">
-          <ion-icon slot="icon-only" name="md-trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <div *ngIf="itemsFavorite.length === 0">
+    お気に入りに登録しているものはありません。
+  </div>
+  <div *ngIf="itemsFavorite.length !== 0">
+    <ion-list *ngFor="let item of itemsFavorite">
+      <ion-item-sliding>
+        <ion-item>
+          <ion-label>
+            <h2>{{ item.repositoryName }}</h2>
+            <p>URL: {{ item.url }}</p>
+            <p>Desription: {{ item.description }}</p>
+            <p>Language: {{ item.language }}</p>
+            <p>owner : {{ item.owner_login_name }}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option color="danger" (click)="onDelete(item.id)">
+            <ion-icon slot="icon-only" name="md-trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+  </div>
 </ion-content>
